TO-DO:
------------------------------
group similar sounding symbol answers
strokes of 20 flashcards, score, and success word
typing answer input type
count wrong answer towards incorrect for that symbol as well
personal statistics
prioritize by total amount
block old browsers


CHANGELOG HISTORY:
------------------------------

v1.0.4
another not enough symbols selected bugfix

v1.0.3
minor grammar and description corrections
added class to options "n" symbol and typo correction
sounds bugfix
not enough symbols selected bugfix
implemented kana table position state save

v1.0.2
moved javascript_libs/ to lib/

v1.0.1
prevent same flashcard from appearing a few times in a row
modified descriptions

v1.0.0
added "about" section

v0.4.5
tooltip fixes
database bugfix
prioritization algorithm tuning

v0.4.4
added meta description and keyword tags
implemented stats tooltips

v0.4.3
added practice and stats descriptions
minor kana table css rework

v0.4.2
implemented global statistics

v0.4.1
implemented database creation, initialization and incrementation
beginner difficulty too many possible answers bugfix

v0.4.0
implemented incresed difficulty based on symbols from the same row
added options descriptions

v0.3.2
implemented incresed difficulty based on similar answers

v0.3.1
changed answer selection (prioritize answers from the checked kana pool)
implemented weighted symbol (flashcard) selection

v0.3.0
kana table bug fixes
flashcard answers bugfix (duplicated answers)
implemented sound to kana option functionality
implemented personal statistics functionality
rearranged header js lib defining
added homepage text/info

v0.2.10
added LICENSE.txt and CHANGELOG files
implemented difficulty option functionality
minor kana sets changes (doubled symbols)
cookie bug fix

v0.2.9
implemented next flashcard timer
simplified setFlashcard() function
added some comments
added console logging

v0.2.8
IE9 compatibility bug fix
minor design enhancements