@@ -1,5 +1,30 @@
+		<div id="social"> <!-- SOCIAL -->
+			<div id="fb_button">
+				<div class="fb-like" data-href="http://zanzou.cmikavac.net/" data-send="false" data-layout="button_count" data-width="120" data-show-faces="false" data-font="tahoma"></div>
+			</div>
+
+			<div id="tw_button">
+				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zanzou.cmikavac.net/" data-text="Zanzou" data-via="pootzko" data-hashtags="zanzou">Tweet</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			</div>
+
+			<div id="gp_button">
+				<!-- Place this tag where you want the +1 button to render. -->
+				<div class="g-plusone" data-size="medium" data-href="http://zanzou.cmikavac.net/"></div>
+
+				<!-- Place this tag after the last +1 button tag. -->
+				<script type="text/javascript">
+				(function() {
+					var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+					po.src = 'https://apis.google.com/js/plusone.js';
+					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+				})();
+				</script>
+			</div>
+		</div> <!-- /SOCIAL -->
+
 		<div id="footer"> <!-- FOOTER -->
-			<b>::::</b> <a href="http://cmikavac.net">cmikavac.net</a> <b>--</b> <a href="mailto:kittihomir@gmail.com">kittihomir@gmail.com</a>
+			<b>::::</b> <a href="http://cmikavac.net">cmikavac.net</a> <b>--</b> <a href="http://cmikavac.net/2012/09/08/zanzou/#respond">comments</a> <b>--</b> <a href="mailto:kittihomir@gmail.com">kittihomir@gmail.com</a>
 		</div> <!-- /FOOTER -->
 	</div> <!-- /CONTENT_HOLDER -->
 </div> <!-- /WRAPPER -->
