@@ -3,6 +3,18 @@
 
 
 <body> <!-- BODY -->
+<!-- FACEBOOK STUFF -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- /FACEBOOK STUFF -->
+
+
 <div id="header"> <!-- HEADER -->
 	<div id="logo_holder">
 		<a href="http://zanzou.cmikavac.net">
