@@ -7,6 +7,7 @@ count wrong answer towards incorrect for that symbol as well
 personal statistics
 prioritize by total amount
 block old browsers
+add social buttons
 
 
 CHANGELOG HISTORY:
@@ -14,6 +15,7 @@ CHANGELOG HISTORY:
 
 v1.0.4
 another not enough symbols selected bugfix
+added social buttons
 
 v1.0.3
 minor grammar and description corrections
